# sd-poke-stat-tracker

./: .gitignore  DEPLOY.md  LICENSE  README.md  _marshal_compat.py  build.js  install.sh  livewatch.py  main.py  moves.py  package.json  pbsfinder.py  plugin.json  pyproject.toml  rebuild.sh  rollup.config.js  saveparser.py  savepath.py  setup.sh  steampaths.py  tsconfig.json  typechart.py
data/: moves.json  themes.json  type_chart.json
game-mod/: meta.txt  stream.rb
py_modules/: _marshal_compat.py  battle_analyzer.py  livewatch.py  moves.py  pbsfinder.py  pbsparser.py  saveparser.py  savepath.py  themes.py  typechart.py
scripts/: install_game_mod.py
src/: api.ts  decky-frontend-lib-shim.js  decky-shim.js  decky.d.ts  index.tsx  store.ts  theme.ts
src/components/: ErrorBoundary.tsx  HealthBar.tsx  PokeballIcon.tsx  PokemonCard.tsx  TabBar.tsx  TypeBadge.tsx  TypeChartGrid.tsx
src/touchmenu/: MoveLookupTouchMenu.tsx  PartyTouchMenu.tsx  TouchMenuContent.tsx  TypeLookupTouchMenu.tsx  index.tsx
src/utils/: normalize.ts
src/views/: BattleAnalyzerView.tsx  HomeView.tsx  PartyView.tsx  SettingsView.tsx  TypeChartView.tsx
tests/: conftest.py  smoke_test.py  test_smoke.py
tools/: README.md  gen_pbs.rb  gen_test_save.rb
